WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129763
Web Inspector: ASSERTION FAILED: m_javaScriptBreakpoints.isEmpty()
https://bugs.webkit.org/show_bug.cgi?id=129763
Summary
Web Inspector: ASSERTION FAILED: m_javaScriptBreakpoints.isEmpty()
Michael Saboff
Reported
2014-03-05 15:54:15 PST
I built ToT WebKit (
r165132
) debug. Open www.apple.com (page really doesn't seem to matter) in Safari. Open and navigate around the inspector. Close the inspector window and: ASSERTION FAILED: m_javaScriptBreakpoints.isEmpty() /Volumes/Data/src/webkit/Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.cpp(114) : virtual void Inspector::InspectorDebuggerAgent::disable(bool) 1 0x113c486e0 WTFCrash 2 0x1138a3581 Inspector::InspectorDebuggerAgent::disable(bool) 3 0x116bbd9af WebCore::WebDebuggerAgent::disable(bool) 4 0x116336adf WebCore::PageDebuggerAgent::disable(bool) 5 0x1138a3451 Inspector::InspectorDebuggerAgent::willDestroyFrontendAndBackend(Inspector::InspectorDisconnectReason) 6 0x11389049e Inspector::InspectorAgentRegistry::willDestroyFrontendAndBackend(Inspector::InspectorDisconnectReason) 7 0x11591c73f WebCore::InspectorController::disconnectFrontend(Inspector::InspectorDisconnectReason) 8 0x11591ce15 WebCore::InspectorController::close() 9 0x111b381b9 WebKit::WebInspector::close() 10 0x111b41553 void IPC::callMemberFunctionImpl<WebKit::WebInspector, void (WebKit::WebInspector::*)(), std::__1::tuple<> >(WebKit::WebInspector*, void (WebKit::WebInspector::*)(), std::__1::tuple<>&&, std::index_sequence<>) 11 0x111b414c8 void IPC::callMemberFunction<WebKit::WebInspector, void (WebKit::WebInspector::*)(), std::__1::tuple<>, std::make_index_sequence<0ul> >(std::__1::tuple<>&&, WebKit::WebInspector*, void (WebKit::WebInspector::*)()) 12 0x111b4091c void IPC::handleMessage<Messages::WebInspector::Close, WebKit::WebInspector, void (WebKit::WebInspector::*)()>(IPC::MessageDecoder&, WebKit::WebInspector*, void (WebKit::WebInspector::*)()) 13 0x111b3fe67 WebKit::WebInspector::didReceiveWebInspectorMessage(IPC::Connection*, IPC::MessageDecoder&) 14 0x111b9a446 WebKit::WebPage::didReceiveMessage(IPC::Connection*, IPC::MessageDecoder&) 15 0x111b9a537 non-virtual thunk to WebKit::WebPage::didReceiveMessage(IPC::Connection*, IPC::MessageDecoder&) 16 0x111814baa IPC::MessageReceiverMap::dispatchMessage(IPC::Connection*, IPC::MessageDecoder&) 17 0x111cec47a WebKit::WebProcess::didReceiveMessage(IPC::Connection*, IPC::MessageDecoder&) 18 0x11165a563 IPC::Connection::dispatchMessage(IPC::MessageDecoder&) 19 0x1116526a0 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::MessageDecoder, std::__1::default_delete<IPC::MessageDecoder> >) 20 0x11165a2f1 IPC::Connection::dispatchOneMessage() 21 0x1116684f2 WTF::FunctionWrapper<void (IPC::Connection::*)()>::operator()(IPC::Connection*) 22 0x111668475 WTF::BoundFunctionImpl<WTF::FunctionWrapper<void (IPC::Connection::*)()>, void (IPC::Connection*)>::operator()() 23 0x111670202 WTF::Function<void ()>::operator()() const 24 0x11167017c std::__1::__function::__func<WTF::Function<void ()>, std::__1::allocator<WTF::Function<void ()> >, void ()>::operator()() 25 0x113c6e9ea std::__1::function<void ()>::operator()() const 26 0x113c7dfb4 WTF::RunLoop::performWork() 27 0x113c7f454 WTF::RunLoop::performWork(void*) 28 0x7fff94b949a1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 29 0x7fff94b86112 __CFRunLoopDoSources0 30 0x7fff94b8589f __CFRunLoopRun 31 0x7fff94b85325 CFRunLoopRunSpecific
Attachments
[PATCH] Proposed Fix
(1.31 KB, patch)
2014-03-05 16:23 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2014-03-05 16:12:17 PST
I'll investigate a fix.
Joseph Pecoraro
Comment 2
2014-03-05 16:23:31 PST
Created
attachment 225924
[details]
[PATCH] Proposed Fix
Geoffrey Garen
Comment 3
2014-03-05 18:53:03 PST
Comment on
attachment 225924
[details]
[PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4
2014-03-05 19:14:07 PST
Comment on
attachment 225924
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 225924 Committed
r165163
: <
http://trac.webkit.org/changeset/165163
>
WebKit Commit Bot
Comment 5
2014-03-05 19:14:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug