Web Inspector: ASSERTION FAILED: m_javaScriptBreakpoints.isEmpty() https://bugs.webkit.org/show_bug.cgi?id=129763

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-03-05
Reviewed by Geoffrey Garen.

Clear the list of all breakpoints, including unresolved breakpoints.

* inspector/agents/InspectorDebuggerAgent.cpp:
(Inspector::InspectorDebuggerAgent::clearInspectorBreakpointState):

Canonical link: https://commits.webkit.org/147810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165163 268f45cc-cd09-0410-ab3c-d52691b4dbfc